--- a/demo-app1/nginx-cm.yaml
+++ b/demo-app1/nginx-cm.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-config
+  namespace: nginx-app
 data:
   index.html: |
     <html lang="en">
