--- a/demo-app1/nginx-svc.yaml
+++ b/demo-app1/nginx-svc.yaml
@@ -9,6 +9,5 @@ spec:
   ports:
   - protocol: TCP
     port: 80
-  externalIPs:
-  - 192.168.1.100
-  type: LoadBalancer
+    nodePort: 30080
+  type: NodePort
